fixed nav scrollbar

--- a/YouTube-Clone/sidebar-style.css
+++ b/YouTube-Clone/sidebar-style.css
@@ -9,6 +9,7 @@
     z-index: 2;
 }
 
+
 .expanded-sidebar {
     position: fixed;
     left: 0px;
@@ -18,6 +19,11 @@
     background-color: white;
     padding-top: 14px;
     z-index: 2;
+    overflow-x: hidden; 
+}
+
+.hide-scroll {
+    overflow-y: hidden;
 }
 
 .sidebar-link {
@@ -78,6 +84,7 @@
 }
 
 .expanded-sidebar .flex-nav-container-2 {
+    width: 240px;
     padding-top: 20px;
     border-bottom: 1px solid rgb(221, 221, 221);
     padding-bottom: 20px;
@@ -122,4 +129,8 @@
     color: rgb(97, 97, 97);
     font-size: 14px;
     padding-left: 31px;
+}
+
+.flex-nav-container-3 {
+    margin-bottom: 300px;
 }
